fixed login flow
